# rs_snake

./: README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: engine.rs  main.rs
server/src/engine/: common.rs
