[package]
name = "snake_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
actix-rt = "2.6.0"
crossterm = "0.25.0"
hyper = "0.14.20"
reqwest = "0.11.11"
futures = "0.3.24"
tokio-core = "0.1.18"
http = "0.2.8"
simple-matrix = "0.1"
crossbeam-channel = "0.5"
anyhow = "1.0.64"
ctrlc = "3.2.3"
matrix_display = "1.0.0"
console = "0.15.1"
signal-hook = { version = "0.3.14", features = ["channel"] }
