[package]
name = "snake_srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
futures = {version = "0.3.23"}
actix-rt = "2.6.0"
io = "0.0.2"
rand = "0.8.5"